Update product image in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <button>Agregar al carrito</button>
                 </a>
                 <a href="">
-                    <img src="img/descuentos/productos/imagen6.jpeg" alt="">
+                    <img class="hot__sale__productos__img" src="img/descuentos/productos/imagen11.avif" alt="">
                     <p>Celular Xiaomi Redmi Note</p>
                     <p>$4500MXN</p>
                     <button>Agregar al carrito</button>
